# LasangnaBot

./: .gitignore  Cargo.toml
src/: guildfiles.rs  images.rs  main.rs  misc.rs  voice.rs
src/guildfiles/: addfav.rs  delfav.rs  favs.rs  playfav.rs  playfavat.rs  randfav.rs
src/misc/: dad.rs  help.rs
src/voice/: join.rs  leave.rs  play.rs  playing.rs  queue.rs  skip.rs  stop.rs
