[package]
name = "lasangnabot"
version = "0.1.2"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue", "serenity"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "model", "client", "voice", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.dotenv]
git = "https://github.com/dotenv-rs/dotenv"
