[package]
name = "lasangnabot"
version = "0.1.2"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
rs621 = "0.6.0"
thiserror = "1"
url = "2"
urlencoding = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derivative = "2"
itertools = "0.10"
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
mockito = "0.30"
image = "0.23"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
features = ["builtin-queue", "serenity"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "model", "client", "voice", "framework", "standard_framework", "native_tls_backend", "http", "unstable_discord_api", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.dotenv]
git = "https://github.com/dotenv-rs/dotenv"

[dependencies.rand]
version = "0.8"
